--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -33,8 +33,16 @@
 
   <div class="container-fluid">
     <div class="header row">
-      <div class="logo col-md-2  ">
+      <div class="logo col-md-2">
         <a href=""><img src="{% static 'img/logo.jpg' %}" alt="logo"></a>
+      </div>
+      <div class="col-md-8">
+        <div class="">
+          <a href="">Home</a>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div>1</div>
       </div>
     </div>
     <div class="main row">
