--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -36,9 +36,9 @@
       <div class="logo col-md-2">
         <a href=""><img src="{% static 'img/logo.jpg' %}" alt="logo"></a>
       </div>
-      <div class="col-md-8">
-        <div class="">
-          <a href="">Home</a>
+      <div class="menubar col-md-8">
+        <div class="menu">
+          <a href="" class="menu-item">Home</a>
         </div>
       </div>
       <div class="col-md-2">
