--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -39,6 +39,7 @@
       <div class="menubar col-md-8">
         <div class="menu">
           <a href="{% url 'home' %}" class="menu-item">Home</a>
+          <a href="{% url 'home' %}" class="menu-item">Hr</a>
         </div>
       </div>
       <div class="col-md-2">
