--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -40,6 +40,7 @@
         <div class="menu">
           <a href="{% url 'home' %}" class="menu-item">Home</a>
           <a href="{% url 'home' %}" class="menu-item">Hr</a>
+          <a href="{% url 'home' %}" class="menu-item">PR</a>
         </div>
       </div>
       <div class="col-md-2">
