--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -49,10 +49,8 @@
           <a href="{% url 'home' %}" class="menu-item">Account</a>
         </div>
       </div>
-      <div class="menubar col-md-1">
-        <div class="menu">
-          <a href="{% url 'home' %}" class="menu-item">Language</a>
-        </div>
+      <div class="menubar col-md-1 logo">
+        <img src="{% static 'img/vn-icon.png' %}" alt="vn-icon" class="">
       </div>
     </div>
     <div class="main row">
