--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -50,7 +50,7 @@
         </div>
       </div>
       <div class="menubar col-md-1 logo">
-        <img src="{% static 'img/en-icon.png' %}" alt="en-icon" class="">
+        <!-- <img src="{% static 'img/en-icon.png' %}" alt="en-icon" class=""> -->
         <img src="{% static 'img/vn-icon.png' %}" alt="vn-icon" class="">
       </div>
     </div>
