--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -49,7 +49,7 @@
           <a href="{% url 'home' %}" class="menu-item">Account</a>
         </div>
       </div>
-      <div class="menubar col-md-1 logo">
+      <div class="menubar col-md-1 lang">
         <!-- <img src="{% static 'img/en-icon.png' %}" alt="en-icon" class=""> -->
         <img src="{% static 'img/vn-icon.png' %}" alt="vn-icon" class="">
       </div>
