--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -53,8 +53,8 @@
         <!-- <a href=""><img src="{% static 'img/vn-icon.png' %}" alt="vn-icon" class=""></a> -->
         <a data-bs-toggle="collapse" href="#lang" role="button" aria-expanded="false" aria-controls="lang"><img src="{% static 'img/en-icon.png' %}" alt="en-icon" class=""></a>
         <div class="lang-menu collapse multi-collapse" id="lang">
-          <div class="lang-item"><a href="#">EN <img src="{% static 'img/en-icon.png' %}" alt="en-icon" class=""></a></div>
-          <div class="lang-item"><a href="#">VN <img src="{% static 'img/vn-icon.png' %}" alt="en-icon" class=""></a></div>
+          <div class="lang-item"><a href="#"><img src="{% static 'img/en-icon.png' %}" alt="en-icon" class=""> <span class="ms-3">EN</span></a></div>
+          <div class="lang-item"><a href="#"><img src="{% static 'img/vn-icon.png' %}" alt="en-icon" class=""> <span class="ms-3">VN</span></a></div>
         </div>
       </div>
     </div>
