--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -58,9 +58,18 @@
           {% else %}
           <a data-bs-toggle="collapse" href="#lang" role="button" aria-expanded="false" aria-controls="lang"><img src="{% static 'img/vn-icon.png' %}" alt="en-icon" class=""></a>
         {% endif %}
+        {% get_available_languages as AVAILABLE_LANGUAGES %}
+        {% get_language_info_list for AVAILABLE_LANGUAGES as languages %}
         <div class="lang-menu collapse multi-collapse" id="lang">
-          <div class="lang-item"><a href="#"><img src="{% static 'img/en-icon.png' %}" alt="en-icon" class=""> <span class="ms-3">EN</span></a></div>
-          <div class="lang-item"><a href="#"><img src="{% static 'img/vn-icon.png' %}" alt="en-icon" class=""> <span class="ms-3">VN</span></a></div>
+        {% for language in languages %}
+            {% if language.code == 'en' %}
+              <div class="lang-item"><a href="/{{ language.code }}/"><img src="{% static 'img/en-icon.png' %}" alt="en-icon" class=""> <span class="ms-3">{{ language.code }}</span></a></div>
+              <!-- {{ language.name_local }} -->
+            {% else %}
+              <div class="lang-item"><a href="/{{ language.code }}/"><img src="{% static 'img/vn-icon.png' %}" alt="en-icon" class=""> <span class="ms-3">{{ language.code }}</span></a></div>
+              <!-- {{ language.name_local }} -->
+            {% endif %}
+        {% endfor %}
         </div>
       </div>
     </div>
