--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -46,7 +46,7 @@
       </div>
       <div class="menubar col-md-3 text-end">
         <div class="menu">
-          <a href="{% url 'home' %}" class="menu-item">Logout</a>
+          <a href="{% url 'logout' %}" class="menu-item">Logout</a>
           <a href="{% url 'home' %}" class="menu-item">Account</a>
         </div>
       </div>
