--- a/project/templates/index1.html
+++ b/project/templates/index1.html
@@ -1,110 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+{% extends "layouts/base.html" %}
+{% load i18n %}
+{% block title %} List User {% endblock title %}
+{% block content %}
 
-  <style>
-    /* The sidebar menu */
-    .sidebar {
-      height: 100%; /* 100% Full-height */
-      width: 0; /* 0 width - change this with JavaScript */
-      position: fixed; /* Stay in place */
-      z-index: 1; /* Stay on top */
-      top: 0;
-      left: 0;
-      background-color: white; /* Black*/
-      overflow-x: hidden; /* Disable horizontal scroll */
-      padding-top: 60px; /* Place content 60px from the top */
-      transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
-    }
+{% for user in objects %}
+  <div>{{user}}</div>
+{% endfor %}
 
-    /* The sidebar links */
-    .sidebar a {
-      padding: 8px 8px 8px 32px;
-      text-decoration: none;
-      font-size: 25px;
-      color: #818181;
-      display: block;
-      transition: 0.3s;
-    }
-
-    /* When you mouse over the navigation links, change their color */
-    .sidebar a:hover {
-      color: #f1f1f1;
-    }
-
-    /* Position and style the close button (top right corner) */
-    .sidebar .closebtn {
-      position: absolute;
-      top: 0;
-      right: 25px;
-      font-size: 36px;
-      margin-left: 50px;
-    }
-
-    /* The button used to open the sidebar */
-    .openbtn {
-      cursor: pointer;
-      background-color: white;
-      color: black;
-      padding: 10px 15px;
-      border: none;
-    }
-
-    .openbtn:hover {
-      opacity: 0.8;
-    }
-
-    /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-    #main {
-      transition: margin-left .5s; /* If you want a transition effect */
-      padding: 20px;
-    }
-
-    /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-    @media screen and (max-height: 450px) {
-      .sidebar {padding-top: 15px;}
-      .sidebar a {font-size: 18px;}
-    }
-  </style>
-</head>
-<body>
-  <div id="mySidebar" class="sidebar">
-    <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Clients</a>
-    <a href="#">Contact</a>
-  </div>
-  
-  <div id="main">
-    <button class="openbtn" onclick="openNav()">&#9776; Open Sidebar</button>
-    <p>Content...</p>
-  </div>
-
-  <script>
-    /* Set the width of the sidebar to 250px and the left margin of the page content to 250px */
-    var nav_status = localStorage.getItem('nav_status');
-    function openNav() {
-      if (nav_status == 0) {
-        nav_status = 1;
-        document.getElementById("mySidebar").style.width = "250px";
-        document.getElementById("main").style.marginLeft = "250px";
-      } else {
-        nav_status = 0;
-        closeNav()
-      }
-      localStorage.setItem('nav_status', nav_status)
-    }
-
-    /* Set the width of the sidebar to 0 and the left margin of the page content to 0 */
-    function closeNav() {
-      document.getElementById("mySidebar").style.width = "0";
-      document.getElementById("main").style.marginLeft = "0";
-    }
-  </script>
-</body>
-</html>
+{% endblock content %}
