--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -90,7 +90,7 @@ li {
 .content {
     padding: 0;
     margin: auto;
-    text-align: center;
+    /* text-align: center; */
     border-right: solid 1px #999;
     border-left: solid 1px #999;
     overflow: scroll;
