--- a/project/templates/index1.html
+++ b/project/templates/index1.html
@@ -3,8 +3,25 @@
 {% block title %} List User {% endblock title %}
 {% block content %}
 
-{% for user in objects %}
-  <div>{{user}}</div>
-{% endfor %}
+<table class="container table table-bordered">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Handle</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for user in objects %}
+    <tr>
+      <th scope="row">1</th>
+      <td>{{ user.id }}</td>
+      <td>{{ user.username }}</td>
+      <td><img src="{{ user.profile.avatar.url }}" style="height: 50px;"></td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
 
 {% endblock content %}
