--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -27,9 +27,9 @@ html, body {
     padding-top: 50px;
     /* max-height: calc(100vh - 50px); */
 
-    -webkit-user-select: none; /* Safari */
-    -ms-user-select: none; /* IE 10 and IE 11 */
-    user-select: none; /* Standard syntax */
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .sidebar {
