--- a/project/apps/authentication/templates/ver_1/import.html
+++ b/project/apps/authentication/templates/ver_1/import.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Import</title>
-</head>
-<body>
+{% extends "layouts/base.html" %}
+{% load i18n %}
+{% block title %} Import User (CSV) {% endblock title %}
+{% block content %}
+
+<div class="container mt-5">
   <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Up</button>
   </form>
-</body>
-</html>
+</div>
+
+{% endblock content %}
