--- a/project/apps/authentication/templates/auth/login.html
+++ b/project/apps/authentication/templates/auth/login.html
@@ -6,7 +6,7 @@
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Login</button>
+  <button type="submit"> {% trans "LOGIN" %} </button>
 </form>
 
 {% endblock content %}
