--- a/project/apps/authentication/templates/auth/logged_out.html
+++ b/project/apps/authentication/templates/auth/logged_out.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  Out
-</body>
-</html>
+{% extends "auth_base.html" %}
+{% load i18n %}
+{% block title %} {% trans "LOGGED_OUT_TITLE" %} {% endblock title %}
+{% block content %}
+
+{% trans "LOGGED_OUT" %}
+
+{% endblock content %}
