--- a/project/apps/authentication/templates/auth/password_reset_complete.html
+++ b/project/apps/authentication/templates/auth/password_reset_complete.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ title }}</title>
-</head>
-<body>
-  password_reset_complete
-</body>
-</html>
+{% extends "auth_base.html" %}
+{% load i18n %}
+{% block title %} {% trans "PASSWORD_RESET_COMPLETE_TITLE" %} {% endblock title %}
+{% block content %}
+
+{% trans "PASSWORD_RESET_COMPLETE" %}
+
+{% endblock content %}
