--- a/project/apps/authentication/templates/auth/password_change_form.html
+++ b/project/apps/authentication/templates/auth/password_change_form.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ title }}</title>
-</head>
-<body>
-  <form action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">change</button>
-  </form>
-</body>
-</html>
+{% extends "auth_base.html" %}
+{% load i18n %}
+{% block title %} {% trans "PASSWORD_CHANGE_FORM_TITLE" %} {% endblock title %}
+{% block content %}
+
+<form method="post">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <button type="submit"> {% trans "CHANGE" %} </button>
+</form>
+
+{% endblock content %}
