--- a/project/apps/authentication/templates/v1/profile.html
+++ b/project/apps/authentication/templates/v1/profile.html
@@ -9,6 +9,7 @@
 <body>
   <h3>Profile</h3>
   <div>Username: {{ user.username }}</div>
+  <div>Email: {{ user.email }}</div>
   <div>Date Joined: {{ user.date_joined | date:'d-m-Y' }}</div>
   <button><a href="{% url 'logout' %}">Logout</a></button>
   <button><a href="{% url 'password_change' %}">password_change</a></button>
