--- a/project/apps/authentication/templates/v1/user_list.html
+++ b/project/apps/authentication/templates/v1/user_list.html
@@ -1,6 +1,6 @@
 {% extends "auth_base.html" %}
 {% load i18n %}
-{% block title %} {% trans "LOGIN_TITLE" %} {% endblock title %}
+{% block title %} {% trans "USER_LIST_TITLE" %} {% endblock title %}
 {% block content %}
 
 <style> table, th, td { border: solid 1px #333; border-collapse: collapse; } </style>
