--- a/project/apps/authentication/templates/extra/user_list.html
+++ b/project/apps/authentication/templates/extra/user_list.html
@@ -8,10 +8,11 @@
 <table>
   <thead>
     <tr>
-      <th>#</th>
+      <th> # </th>
       <th> ID </th>
       <th> Username </th>
       <th> Avatar </th>
+      <th> - </th>
     </tr>
   </thead>
   <tbody>
@@ -19,9 +20,11 @@
     <tr>
       <th> {{ forloop.counter }} </th>
       <td> {{ user.id }} </td>
-      
-      <td>{{ user.username }}</td>
-      <td><img src="{{ user.profile.avatar.url }}" style="height: 50px;"></td>
+      <td> {{ user.username }} </td>
+      <td><img src="{{ user.profile.avatar.url }}"]></td>
+      <td>
+        <a href="#"><button> {% trans "RESET_PASSWORD" %} </button></a>
+      </td>
     </tr>
     {% endfor %}
   </tbody>
