--- a/project/apps/authentication/templates/extra/user_detail.html
+++ b/project/apps/authentication/templates/extra/user_detail.html
@@ -1,9 +1,9 @@
 {% extends "auth_base.html" %}
 {% load i18n %}
-{% block title %} {% trans "PROFILE_DETAIL_TITLE" %} {% endblock title %}
+{% block title %} {% trans "USER_DETAIL_TITLE" %} {% endblock title %}
 {% block content %}
 
-<h3>{% trans "PROFILE" %}</h3>
+<h3>{% trans "USER_DETAIL" %}</h3>
 <div>{% trans "USERNAME" %}: {{ user.username }}</div>
 <div>{% trans "EMAIL" %}: {{ user.email }}</div>
 <div>{% trans "DATE_JOINED" %}: {{ user.date_joined | date:'d-m-Y' }}</div>
