--- a/project/apps/authentication/templates/extra/user_add.html
+++ b/project/apps/authentication/templates/extra/user_add.html
@@ -3,10 +3,38 @@
 {% block title %} {% trans "USER_ADD_TITLE" %} {% endblock title %}
 {% block content %}
 
+{% if messages %}
+  {% for msg in messages %}
+    {{ msg.level_tag }}-{{ msg }}
+  {% endfor %}
+{% endif %}
+
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
+  
   {{ form.as_p }}
+  <input type="checkbox" onclick="toggle()" id="acc_cb" name="custom_acc" value="True" {% if request.POST.custom_acc == 'True' %} checked {% endif %}>
+  <label for="custom_acc"> Custom acc </label><br>
+  <div id="content" style="display: none;">
+    <p>Lorem ipsum dolor sit amet,</p>
+    {{ acc_form.as_p }}
+  </div>
   <button type="submit"> {% trans "SUBMIT" %} </button>
 </form>
+
+<script>
+toggle = () => {
+  var cb = document.getElementById('acc_cb')
+  if (cb.checked == false) {
+    document.getElementById('content').style.display = "none"
+  } else {
+    document.getElementById('content').style.display = "block"
+
+  }
+}
+toggle()
+</script>
+
+
 
 {% endblock content %}
