--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,10 +1,7 @@
-{% extends "layouts/base.html" %}
+{% extends "layouts/extra.html" %}
 {% load i18n %}
 {% block title %} index {% endblock title %}
 {% block content %}
-
-
-{% trans "test_text" %}
 
 <div>-------- {% trans "URL_LIST" %} ---------</div>
 
