--- a/apps/authentication/templates/extra/user_list.html
+++ b/apps/authentication/templates/extra/user_list.html
@@ -16,7 +16,7 @@
     </tr>
   </thead>
   <tbody>
-    {% for user in objects %}
+    {% for user in users %}
     <tr>
       <th> {{ forloop.counter }} </th>
       <td> {{ user.id }} </td>
