--- a/apps/authentication/templates/auth_index.html
+++ b/apps/authentication/templates/auth_index.html
@@ -3,6 +3,22 @@
 {% block title %} {% trans "AUTH_INDEX_TITLE" %} {% endblock title %}
 {% block content %}
 
+{% get_current_language as CURRENT_LANGUAGE %}
+  {% if CURRENT_LANGUAGE == 'en' %} EN {% else %} OT {% endif %}
+  {% get_available_languages as AVAILABLE_LANGUAGES %}
+  {% get_language_info_list for AVAILABLE_LANGUAGES as languages %}
+  <div class="lang-menu collapse multi-collapse" id="lang">
+  {% for language in languages %}
+      {% if language.code == 'en' %}
+        <a href="/">{{ language.code }}</a>
+        {{ language.name_local }}
+      {% else %}
+        <a href="/{{ language.code }}/">{{ language.code }}</a>
+        {{ language.name_local }}
+      {% endif %}
+      <br>
+  {% endfor %}
+
 <div>-------- {% trans "URL_LIST" %} ---------</div>
 
 {% for url in url_list %}
