--- a/apps/authentication/templates/auth_index.html
+++ b/apps/authentication/templates/auth_index.html
@@ -3,21 +3,21 @@
 {% block title %} {% trans "AUTH_INDEX_TITLE" %} {% endblock title %}
 {% block content %}
 
-{% get_current_language as CURRENT_LANGUAGE %}
-  {% if CURRENT_LANGUAGE == 'en' %} EN {% else %} OT {% endif %}
-  {% get_available_languages as AVAILABLE_LANGUAGES %}
-  {% get_language_info_list for AVAILABLE_LANGUAGES as languages %}
-  <div class="lang-menu collapse multi-collapse" id="lang">
-  {% for language in languages %}
-      {% if language.code == 'en' %}
-        <a href="/">{{ language.code }}</a>
-        {{ language.name_local }}
-      {% else %}
-        <a href="/{{ language.code }}/">{{ language.code }}</a>
-        {{ language.name_local }}
-      {% endif %}
-      <br>
-  {% endfor %}
+<form action="{% url 'set_language' %}" method="post">
+  {% csrf_token %}
+    <input name="next" type="hidden" value="{{ redirect_to }}">
+    <select name="language">
+        {% get_current_language as LANGUAGE_CODE %}
+        {% get_available_languages as LANGUAGES %}
+        {% get_language_info_list for LANGUAGES as languages %}
+        {% for language in languages %}
+            <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+                {{ language.name_local }} ({{ language.code }})
+            </option>
+        {% endfor %}
+    </select>
+    <input type="submit" value="Go">
+</form>
 
 <div>-------- {% trans "URL_LIST" %} ---------</div>
 
